--- a/reservation-frontend/src/App.scss
+++ b/reservation-frontend/src/App.scss
@@ -10,7 +10,7 @@ h1 {
   margin-bottom: 1em;
 }
 
-h2, h3, h4, h5, h6 {
+h2, h3, h4, h5, h6, p {
   margin-bottom: 0.5em;
 }
 
@@ -45,13 +45,17 @@ h2, h3, h4, h5, h6 {
       font-size: 0.9em;
       padding: 0.5em 1.5em;
       color: white;
-      background: rgb(9, 9, 103);
+      background: rgb(19, 19, 129);
       font-weight: bold;
       cursor: pointer;
     }
 
     button:hover {
       background: rgb(53, 53, 194)
+    }
+
+    button:disabled {
+      background: rgb(189 189 249)
     }
   }
 }
