--- a/reservation-frontend/src/App.scss
+++ b/reservation-frontend/src/App.scss
@@ -59,3 +59,15 @@ h2, h3, h4, h5, h6, p {
     }
   }
 }
+
+.ReservationArea {
+
+  .menu {
+    background: #ffd89a;
+  }
+
+  section {
+    position: relative;
+  }
+
+}
