--- a/reservation-frontend/src/App.scss
+++ b/reservation-frontend/src/App.scss
@@ -62,8 +62,15 @@ h2, h3, h4, h5, h6, p {
 
 .ReservationArea {
 
-  .menu {
-    background: #ffd89a;
+  header {
+    padding: 0.5em;
+    margin-bottom: 1.5em;
+    border-bottom: 1px solid wheat;
+
+    h1 {
+      margin: 0;
+      margin-left: 40px;
+    }
   }
 
   section {
