--- a/reservation-frontend/src/App.scss
+++ b/reservation-frontend/src/App.scss
@@ -14,6 +14,12 @@ h2, h3, h4, h5, h6, p {
   margin-bottom: 0.5em;
 }
 
+.clearFix::after {
+  content: ' ';
+  display: block;
+  clear: both;
+}
+
 .formDiv {
   margin: 0 auto;
   width: 60%;
