--- a/reservation-frontend/src/Sidebar.scss
+++ b/reservation-frontend/src/Sidebar.scss
@@ -48,7 +48,7 @@
 .bm-menu {
   background: #373a47;
   padding-top: 2.5em;
-  font-size: 1.15em;
+  font-size: 1em;
 }
 
 /* 
@@ -73,7 +73,7 @@
   display: inline-block;
 
   /* aqui sou eu customizando */
-  padding: 0.8em 0.5em;
+  padding: 0.5em;
   color: white;
 }
 
@@ -85,4 +85,11 @@
   position: absolute;
   top: 0;
   left: 0;
+}
+
+/* Melhorando no celular */
+@media(max-width: 650px) {
+  .bm-menu {
+    font-size:0.8em;
+  }
 }
