--- a/reservation-frontend/src/components/screen/Sidebar.scss
+++ b/reservation-frontend/src/components/screen/Sidebar.scss
@@ -5,7 +5,7 @@
 
 /* Botão hambúrguer */
 .bm-burger-button {
-  position: fixed;
+  position: absolute;
   width: 36px;
   height: 30px;
   left: 15px;
