--- a/reservation-frontend/src/components/screen/PageHeader.scss
+++ b/reservation-frontend/src/components/screen/PageHeader.scss
@@ -10,13 +10,16 @@
 }
 
 .destinationSection {
+  margin-bottom: 1.5em;
+  border: 1px solid #BBB;
+  border-radius: 10px;
+  padding: 1em;
+
   img {
     width: 50%;
     display: block;
     margin: auto;
   }
-
-  margin-bottom: 1.5em;
 }
 
 @media(min-width: 500px) {
@@ -30,6 +33,5 @@
       float: right;
       width: 20%;
     }
-
   }
 }
