--- a/reservation-frontend/src/App.scss
+++ b/reservation-frontend/src/App.scss
@@ -14,6 +14,18 @@ h2, h3, h4, h5, h6, p {
   margin-bottom: 0.5em;
 }
 
+h3 {
+  text-align: center;
+  background: wheat;
+  color: #C00;
+  padding: 0.5em;
+}
+
+h4 {
+  background: #CCC;
+  padding: 0.3em;
+}
+
 .clearFix::after {
   content: ' ';
   display: block;
