Brincando com templates

--- a/catalogo/src/main/resources/templates/home.html
+++ b/catalogo/src/main/resources/templates/home.html
@@ -1,1 +1,12 @@
-<h1>Hellô, Paidégua</h1>
+<!DOCTYPE html>
+<html>
+
+<!-- Usando fragmento: arquivo base.html, fragmento head -->
+<head th:replace="~{base :: head('Página inicial')}">
+</head>
+
+<body>
+    <h1>Hellô, Paidégua</h1>
+</body>
+
+</html>
