--- a/catalogo/src/main/resources/templates/area-do-cliente.html
+++ b/catalogo/src/main/resources/templates/area-do-cliente.html
@@ -1,1 +1,12 @@
-<h1>Hellô, Criente!</h1>
+<!DOCTYPE html>
+<html>
+
+<!-- Usando fragmento: arquivo base.html, fragmento head -->
+<head th:replace="~{base :: head('Área do Cliente')}">
+</head>
+
+<body>
+    <h1>Hellô, Criente!</h1>
+</body>
+
+</html>
