Formulariozinho da hora

--- a/catalogo/src/main/resources/templates/home.html
+++ b/catalogo/src/main/resources/templates/home.html
@@ -7,6 +7,9 @@
 
 <body>
     <h1>Hellô, Paidégua</h1>
+    <p>
+        <a th:href="@{/cadastro-de-cliente}">Cadastre-se</a>
+    </p>
 </body>
 
 </html>
