--- a/catalogo/src/main/resources/static/style.css
+++ b/catalogo/src/main/resources/static/style.css
@@ -5,3 +5,12 @@
     padding: 0;
     font-family: 'Nunito Sans', sans-serif;
 }
+
+h1, h2 {
+	margin-bottom: 0.3em;
+}
+
+h3, h4, h5, h6,
+p, div.campo-form {
+	margin-bottom: 0.5em;
+}
