Edição do cliente logado

--- a/catalogo/src/main/resources/templates/clientes/form_cliente.html
+++ b/catalogo/src/main/resources/templates/clientes/form_cliente.html
@@ -41,7 +41,7 @@
 	    
 	    <div class="campo-form">
 	        <label for="senha">Senha:</label> <br>
-	        <input type="password" th:field="*{senha}">
+	        <input type="password" th:field="*{senha}" placeholder="preencha com espaços para manter">
 	    </div>
 	    
 	    <div class="campo-form">
